Figure 8 and its surrounding

--- a/main.tex
+++ b/main.tex
@@ -260,7 +260,7 @@ With these three rules at play, we exposed the model to patterned sensory stimul
 \begin{figure*}[t!]
 \includegraphics[width=\linewidth]{fig8.pdf}
 \caption{
-Model results. Each plot shows how one network measure changed as the model developed. Lines of different colors represent different model types: red is for the default model; other colors show sensitivity analyses. See the text for details. Plots B and C have a gap in Y axis, to accommodate an outlier. }
+Model results. Each plot shows how one network measure changed as the model developed. Lines of different colors represent different model types: bold black is for the default model; other colors show sensitivity analyses. See the text for details. Plots B and C have a gap in Y axis, to accommodate an outlying curve. }
 \end{figure*}
 
 The \textbf{summary of modeling results} is shown in Figure 8 (black line in each plot). In development, the network became selective for looming stimuli, both in terms of \textbf{total response} (by the end of development network responded to looming 99$\pm$9\% stronger than to flash; Figure 8A; "no selectivity" corresponds to the value of 0) and \textbf{average selectivity} (mean Cohen $d$ of responses across all cells = 1.09$\pm$0.10; Figure 8B). The \textbf{share of cells} selective for looming stimuli also increased (Figure 8C), and plateaued at $\sim$98\% level, as did the selectivity of the top 10\% of most selective cells (Figure 8D).
@@ -271,7 +271,7 @@ Unlike for biological experiments, the model was selective for \textbf{looming o
 
 The \textbf{position of selective cells} within the network was different in the model, compared to biological experiments. While in tadpoles selective cells tended to sit in the middle of the retinotopic field, in the model they tended to be on the periphery, and selectivity for looming stimuli positively (rather than negatively as in calcium imaging experiments) correlated with the distance from the network center (Figure 8J). Similar to tadpoles, however, this correlation decreased in development (from $r\sim$ 0.75 in a naive network, to $r\sim$0.25 in a trained network). Similarly to biological networks, selective cells tended to be closer to each other (down to 71$\pm$3\% of distance expected for random connections; Figure 8K), yet unlike for biological networks, this locality of connections was refined in development.
 
-We then looked at topological and functional correlates of looming selectivity in model networks (\textbf{centrality measures}). Selective cells tended to be more spiky ($r$=0.34$\pm$0.12; Figure 8L), and usually were not a part of a cluster (Figure 8M; final correlation with local clustering coefficient $r$=$-$0.26$\pm$0.12). Unlike in biological networks, in the base model (red line) selective sells did not have higher Katz centrality ($r$=0.02$\pm$0.13; Figure 8N), and they did not tend to receive an unusual number of incoming connections ($r=$0.00$\pm$0.12; Figure 8O). As in biological experiments, selective cells tended to be connected to each other (weighted assortativity of 0.24$\pm$0.07; Figure 8P). %In naive networks, the majority ($\sim$85\%) of strong edges (top 50\% of edges by weight) tended to lead from less selective sells to more selective ones, but in developed networks this share was reduced to chance value (51$\pm$0.03), matching our results from biological networks.
+We then looked at topological and functional correlates of looming selectivity in model networks (\textbf{centrality measures}). Selective cells tended to be more spiky ($r$=0.34$\pm$0.12; Figure 8L), and usually were not a part of a cluster (Figure 8M; final correlation with local clustering coefficient $r$=$-$0.26$\pm$0.12). Unlike in biological networks, in the base model (red line) selective sells did not have higher Katz centrality ($r$=0.02$\pm$0.13; Figure 8N), and they did not tend to receive an unusual number of incoming connections ($r=$0.00$\pm$0.12; Figure 8O). As in biological experiments, selective cells tended to be connected to each other (weighted assortativity of 0.24$\pm$0.07; Figure 8P). In naive networks, the majority ($\sim$85\%) of strong edges (top 50\% of edges by weight) tended to lead from less selective sells to more selective ones, but in developed networks this share was reduced to chance value (51$\pm$0.03), matching results from biological networks.
 
 The \textbf{variability of responses} to looming stimuli over time, quantified as the number of principal components required to describe 80\% of response variability, mildly increased with network development, from 28$\pm$1 to 37$\pm$1 (Figure 8Q). The number of detected network \textbf{ensembles} did not change in development, staying around 15 (Figure 8R), but the share of variance in network responses explained by the involvement of different ensembles increased from $\sim$35\% in naive networks, to $\sim$50\% by the end of learning. As in biological networks, cells that formed an ensemble were slightly (by ca. 20\%) more likely to be connected to each other, and were about 40\% closer to each other than any two random cells in the network.
 
@@ -279,7 +279,7 @@ The \textbf{distribution of degrees} in the model was similar to that in biologi
 
 To assess whether the model developed \textbf{synfire chains} synchronized with looming stimuli, we calculated a correlation between the synaptic weights connecting different cells in the model network (coefficients of the adjacency matrix), and the frequency at which these pairs of cells were activated in a sequence (one immediately after another) during looming stimulation. We found that looming-encoding edges were overrepresented in our connectivity graphs, and their share increased in development (Figure 8U). To estimate how strongly synfire chains contributed to looming detection we looked whether edges that led from less looming-selective to more selective cells tended to be the ones activated during looms (see Methods). We found (Figure 8V) that the contribution of looming-aligned edges to selectivity increase along the graph was non-zero, and tended to grow, but very mildly, indicating that synfire resonances were not the sole mechanism behind looming detection.
 
-Finally, we observed that most \textbf{global network measures} changed as the network matured: efficiency (Figure 8W) and modularity (Figure 8X) increased, while clustering (Figure 8Y) decreased. In all three cases, the changes were mainly due to changes in weight and degree distribution, as they persisted if calculated on networks randomized with degree-preserving rewiring. The flow hierarchy (Figure 8Z) increased mildly in development, which was entirely due to structured changes in network topology, as the effect disappeared in rewired graphs. %A robust increase in modularity may seem to be in contradiction with a stable number of activation ensembles in the network, as network modules may be expected to form activity ensembles. We argue that the reason for this difference is that, as in biological experiments, we identified ensembles from activity during highly structured sensory stimulation, rather than from long recordings of spontaneous activity \citep{triplett2018emergence}.
+Finally, we observed that most \textbf{global network measures} changed as the network matured: efficiency (Figure 8W) and modularity (Figure 8X) increased, while clustering (Figure 8Y) decreased. In all three cases, the changes were mainly due to changes in weight and degree distribution, as they persisted if calculated on networks randomized with degree-preserving rewiring. The flow hierarchy (Figure 8Z) increased mildly in development, which was entirely due to structured changes in network topology, as the effect disappeared in rewired graphs.
 
 To conclude whether predictions of our model matched biological experiments overall, we formulated a \textbf{list of “atomic”, easily verifiable elementary statements} about different measures we analyzed (Table 1, first two columns). The model and the experiments showed similar selectivity for looming over flash, but different selectivity to looming over scrambled stimuli. The interplay between cell position and connectivity was similar, except for the spatial distribution of looming-selective cells within the retinotopic map, which was peripheral in the model, but central in tadpoles. Changes in degree distributions were well matched, yet, with a possible exception of modularity, none of other network measures matched. When correlations between different types of node centrality and cell selectivity were considered, some of them matched, but some did not.
 
@@ -292,13 +292,13 @@ To conclude whether predictions of our model matched biological experiments over
 
 \subsection*{Sensitivity analysis}
 
-While a comparison with one faithfully constructed model is important, a better approach is to consider a family of models, and see which assumptions are critical for the replication of biological results, and which ones are not essential \citep{linderman2017constrain, pauli2018repro}. For example, we wondered whether it was important to assume that plasticity was stronger during actual collisions, or whether looming selectivity would develop if instead of looming stimuli we used more general visual stimuli. We also wondered whether structured sensory flow is necessary for the emergence of selectivity \citep{triplett2018emergence}. To answer these questions, we rerun our model, excluding different parts of it one by one (but not in a cumulative fashion). First we removed explicit synaptic competition, by replacing it with synapsic weight decay (Figure 8, red lines). In a different set of simulations we greatly decreased the amount of intrinsic plasticity present in the system (Figure 8, green lines), and in yet another set we replaced STDP with simple symmetrical Hebbian plasticity (Figure 8, blue lines). Finally, in last two series of simulations, we let the model develop either while exposed to random visual noise (Figure 8, pink dashed line), or a randomized mix of translating, receding, and oblique looming stimuli (Figure 8, gray dashed line).
+While a comparison with one faithfully constructed model is important, a better approach is to consider a family of models, and see which assumptions are critical for the replication of biological results, and which ones are not essential \citep{linderman2017constrain, pauli2018repro}. For example, we wondered whether it was important to assume that plasticity was stronger during actual collisions, or whether looming selectivity would develop if instead of looming stimuli we used more general visual stimuli. We also wondered whether structured sensory flow is necessary for the emergence of selectivity \citep{triplett2018emergence}. To answer these questions, we rerun our model, excluding different parts of it one by one (but not in a cumulative fashion). First we removed explicit synaptic competition, by replacing it with synapsic weight decay (Figure 8, red lines). In a different set of simulations we greatly decreased the amount of intrinsic plasticity present in the system (Figure 8, dotted green lines), and in yet another set we replaced STDP with simple symmetrical Hebbian plasticity (Figure 8, blue lines). Finally, in last two series of simulations, we let the model develop either while exposed to random visual noise (Figure 8, dashed pink lines), or a randomized mix of translating, receding, and oblique looming stimuli (Figure 8, dashed gray lines).
 
-Disruption of individual developmental rules led to very different changes in network properties, and their trajectories. When STDP was replaced by a simple Hebbian plasticity (Table 1, column "No STDP"; blue lines in Figure 8), looming selectivity was similar or better than with STDP (top lines in Figure8A,B,F,G), and the network generally developed similarly, except for modularity that was higher (Figure 8X), and neuronal ensembles that were very strongly interconnected (connections within ensembles were up to 4 times more likely than between ensembles, compared to $\sim$1.2 times in base experiments). With Hebbian plasticity, and the model trained on looming stimuli, looming-resonant synfire chains constituted more than 40\% of all network edges (Figure 8U), and contributed to looming selectivity more strongly than in the base, STDP-driven model (Figure 8V).
+Disruption of individual developmental rules led to very different changes in network properties, and their trajectories. When STDP was replaced by a simple Hebbian plasticity (Table 1, column "No STDP"; blue lines in Figure 8), looming selectivity was similar to that for STDP (top lines in Figure8A,B,F,G), and the network generally developed similarly, except that reciprocal connections were not eliminated (Figure 8T); connections were more local (Figure 8K) and modular (disjointed, Figure 8X), and with very strongly interconnected ensembles (connections within ensembles were 7 times more likely than between ensembles, compared to only $\sim$1.2 probability ratio in base experiments).
 
 When synaptic competition was replaced with synaptic strength decay (Table 1, column "No Syn. Comp."), the degree distribution was very different (got flatter rather than sharper; Figure 8U, red lines); selectivity for looming stimuli was weakened (Figure 8C); the pattern of interactions between selectivity and node centrality became unlike what was observed in the base series of experiments (Figure 8M-O), and the network became strongly hierarchical (Figure 8Z). The main reason for these differences appears to be that without synaptic competition, chains of connected neurons were allowed to lead to "dead-ends" within the graph, while with competition the total output of each neuron remained constant, leading to the development of cycles. 
 
-When intrinsic plasticity was weakened (Table 1, column "No Intrinsic"; Figure 8, green lines), looming detection did not emerge (green in Figure 8A-C,F-H), and networks had simpler response structure, both in terms of PCA results (Figure 8Q), and ensemble analysis (Figure 8R). This shows that agile intrinsic plasticity is critical for learning; without it the interaction between neuronal activity and network connectivity is disrupted, as the network cannot process sensory stimuli, yet is prone to spontaneous activity.
+When intrinsic plasticity was weakened (Table 1, column "No Intrinsic"; Figure 8, dotted green lines), looming detection did not emerge (bottom lines in Figure 8A-C,F-H), and networks had simpler response structure, both in terms of PCA results (Figure 8Q), and ensemble analysis (Figure 8R). This shows that agile intrinsic plasticity is critical for learning; without it the interaction between neuronal activity and network connectivity is disrupted, as the network cannot process sensory stimuli, yet is prone to spontaneous activity.
 
 Finally, training exclusively on looming stimuli was not critical for most measurements, in terms of replicating predictions of a full model, but training on structured stimuli was. When looming stimuli (black line in Figure 8) were replaced by non-colliding visual stimuli (dashed gray line in Figure 8), most network parameters developed similarly to how they did in the base model (Table 1, column "Visual"). Stimulus encoding was similar or better; measures of looming selectivity showed similar trajectories (Figure 8A-I), except that the values of selectivity were 20-50\%, and changes in many network properties were indistinguishable (Figure 8W-Z). In contrast, when patterned stimuli were replaced with uncorrelated noise (dashed pink line in Figure 8; Table 1, column "Noise"), most measures of selectivity did not improve with time (dashed pink lines are flat in Figure 8A-B and D-I), even though network topology still changed in development (Figure 8W-Z). It suggests that looming detection should not emerge in enucleated or dark-rared aquatic animals, unless the development of their tecta is guided by retinal waves with temporal statistics similar to that of behaviorally relevant visual stimuli \citep{huberman2008waves}. This prediction matches experimental reports from tadpoles \citep{xu2011}, but curiously seems to contradict observations in Zebrafish \citep{pietri2017emergence}.
 
