--- a/refs.bib
+++ b/refs.bib
@@ -612,6 +612,17 @@
   publisher={Am Physiological Soc}
 }
 
+@article{rochefort2009sparsification,
+  title={Sparsification of neuronal activity in the visual cortex at eye-opening},
+  author={Rochefort, Nathalie L and Garaschuk, Olga and Milos, Ruxandra-Iulia and Narushima, Madoka and Marandi, Nima and Pichler, Bruno and Kovalchuk, Yury and Konnerth, Arthur},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={106},
+  number={35},
+  pages={15049--15054},
+  year={2009},
+  publisher={National Acad Sciences}
+}
+
 @article{clopath2010stdpcoding,
   title={Connectivity reflects coding: a model of voltage-based STDP with homeostasis},
   author={Clopath, Claudia and B{\"u}sing, Lars and Vasilaki, Eleni and Gerstner, Wulfram},
@@ -1037,6 +1048,17 @@
   publisher={Frontiers}
 }
 
+@article{barker2015sensorimotor,
+  title={Sensorimotor decision making in the zebrafish tectum},
+  author={Barker, Alison J and Baier, Herwig},
+  journal={Current Biology},
+  volume={25},
+  number={21},
+  pages={2804--2814},
+  year={2015},
+  publisher={Elsevier}
+}
+
 @article{ciarleglio2015,
   title={Multivariate analysis of electrophysiological diversity of {Xenopus} visual neurons during development and plasticity},
   author={Ciarleglio, Christopher M and Khakhalin, Arseny S and Wang, Angelia F and Constantino, Alexander C and Yip, Sarah P and Aizenman, Carlos D},
@@ -1168,6 +1190,17 @@
   pages={94},
   year={2016},
   publisher={Frontiers}
+}
+
+@article{orger2016review,
+  title={The cellular organization of zebrafish visuomotor circuits},
+  author={Orger, Michael B},
+  journal={Current Biology},
+  volume={26},
+  number={9},
+  pages={R377--R385},
+  year={2016},
+  publisher={Elsevier}
 }
 
 @article{papo2016beware,
@@ -1383,6 +1416,27 @@
   pages={390435},
   year={2018},
   publisher={Cold Spring Harbor Laboratory}
+}
+
+@article{heap2018dimming,
+  title={Luminance changes drive directional startle through a thalamic pathway},
+  author={Heap, Lucy AL and Vanwalleghem, Gilles and Thompson, Andrew W and Favre-Bulle, Itia A and Scott, Ethan K},
+  journal={Neuron},
+  volume={99},
+  number={2},
+  pages={293--301},
+  year={2018},
+  publisher={Elsevier}
+}
+
+@article{heap2018hypothalamic,
+  title={Hypothalamic projections to the optic tectum in larval zebrafish},
+  author={Heap, Lucy A and Vanwalleghem, Gilles C and Thompson, Andrew W and Favre-Bulle, Itia and Rubinsztein-Dunlop, Halina and Scott, Ethan K},
+  journal={Frontiers in neuroanatomy},
+  volume={11},
+  pages={135},
+  year={2018},
+  publisher={Frontiers}
 }
 
 @article{helmbrecht2018topography,
