Discussion, slightly more readable

--- a/main.tex
+++ b/main.tex
@@ -304,21 +304,21 @@ Finally, training exclusively on looming stimuli was not critical for most measu
 
 \section*{Discussion}
 
-In the first half of this study, we reconstruct functional connectivity in the tectum of \textit{Xenopus} tadpoles from high-speed calcium imaging recordings, and describe novel aspects of tectal network topology. We show that tectal networks become more sparse and openwork with development, approaching scale-free statistics (with degrees following a power distribution with $\gamma >$ 2), and non-random network structure. We also show that looming-selective cells tend to be located in the middle of the receptive field for a looming stimulus they respond to, and that they tend to serve as "information sinks", collecting more inputs from the rest of the network, compared to non-selective cells.
+In the first half of this study, we reconstruct functional connectivity in the tectum of \textit{Xenopus} tadpoles from high-speed calcium imaging recordings, and describe novel aspects of tectal network topology. We show that tectal networks become more sparse and lightweight with development, approaching scale-free statistics (node degrees following a power distribution with $\gamma >$ 2), and acquiring non-random network structure. We also show that looming-selective cells tend to be located in the middle of the receptive field, and that they tend to serve as "information sinks", collecting slightly more inputs from the rest of the network, compared to non-selective cells.
 
-For the second part of this paper, we hypothesized that a simulated developing network governed by the spike-time-dependent plasticity, synaptic competition, and stimulated by patterned visual inputs, would 1) spontaneously acquire selectivity for looming stimuli, and 2) develop a non-random network structure, which 3) would be similar to that observed in biological experiments. The support for this hypothesis is mixed. The model did develop selectivity for looming stimuli (both in terms of average preference, and stimulus encoding), and this increase in selectivity was resilient to changes in model assumptions. Yet model result were not truly replicated in biological experiments, as in tadpoles there was no improvement in looming detection, and neither average selectivity, stimulus encoding, nor cell specialization increased with development. This was particularly surprising in view of a known improvement in collision avoidance in tadpoles with age \citep{dong2009}. Moreover, while spatiotemporally tuned synfire chains clearly emerged in the model (Figure 8U), we could not clearly tease out their quantitative contribution to looming selectivity.
+In the second half of this paper, we hypothesized that a simulated developing network governed by the spike-time-dependent plasticity, synaptic competition, and stimulated by patterned visual inputs, would (1) spontaneously acquire selectivity for looming stimuli, and (2) develop a non-random network structure, (3) similar to that observed in biological experiments. The support for this hypothesis is mixed. The model did develop selectivity for looming stimuli (both in terms of average preference, and stimulus encoding), and this increase in selectivity was resilient to changes in model assumptions. Yet model result were not fully replicated in biological experiments, as in tadpoles there was no improvement in looming detection with age, as neither average selectivity, stimulus encoding, nor cell specialization increased with development. This was particularly surprising in view of a known improvement in collision avoidance in developing tadpoles \citep{dong2009}. Moreover, while spatiotemporally tuned synfire chains clearly emerged in the model (Figure 8U), we found it hard to clearly tease out their quantitative contribution to looming selectivity.
 
-As predicted, our model networks developed non-random structure, with a scale-free degree distribution, low clustering, and high modularity. Several results related to network structure were replicated in biological experiments (Table 1, compare columns "Imaging" and "Model / Base"): most notably, changes in network degree distribution, a decrease in bidirectional connections, and statements related to neuronal ensembles. This match between the model and the experiment suggests that at the very least, our model captured the nature of network development under the influence of synaptic competition and spike-time-dependent plasticity (STDP). Synaptic competition promoted connectivity in weakly connected neurons, while "punishing" overconnected cells, which created light-frame, openwork graph structures \citep{fiete2010chains}, and STDP coordinated activity within sub-networks, increasing modularity \citep{stam2010modular, litwin2014assemblies}, similar to how it was previously described for other types of plasticity \citep{damicelli2018topomod, triplett2018emergence}. We did not observe changes in the \textit{number} of neuronal ensembles \citep{avitan2017spontaneous, pietri2017emergence}, but we believe this is because our experiments were not suited for ensemble detection, as we worked with strong shared inputs that reliably activated almost every neuron in the network. This made our experiments very much unlike the case of spontaneous activity, when different sub-networks get activated randomly, with activity propagating within modules more readily than between them \citep{avitan2017spontaneous}.
+As predicted, our model networks developed non-random structure, with a scale-free degree distribution, low clustering, and high modularity. Several results related to network structure were replicated in biological experiments (Table 1, compare columns "Imaging" and "Model / Base"): most notably, changes in network degree distribution, a decrease in bidirectional connections, and statements related to neuronal ensembles. This match between the model and the experiment suggests that at the very least, our model captured the nature of network development under the influence of synaptic competition and spike-time-dependent plasticity (STDP). Synaptic competition promoted connectivity in weakly connected neurons, while "punishing" overconnected cells, which created light-frame, openwork graph structures \citep{fiete2010chains}, while STDP coordinated activity within sub-networks, increasing modularity \citep{stam2010modular, litwin2014assemblies}, similar to how it was previously described for other types of plasticity \citep{damicelli2018topomod, triplett2018emergence}. We did not observe changes in the \textit{number} of neuronal ensembles \citep{avitan2017spontaneous, pietri2017emergence}, but we believe this is because our experiments were not suited for ensemble detection, as we worked with strong shared inputs that reliably activated almost every neuron in the network. This made our experiments very much unlike those that study spontaneous activity in the tectum, when different sub-networks get activated randomly, and activity propagates within modules more readily than between them \citep{avitan2017spontaneous}.
 
 At the same time, most model predictions about how network properties were supposed to change in development did not replicate in biological experiments. There are four possible explanations for this discrepancy. First, while neurons from stage 46 and 49 tadpoles have different synaptic and intrinsic properties \citep{ciarleglio2015}, and while retinal inputs to the tectum are known to be refined at these developmental stages \citep{tao2005refinement, munz2014hebbian}, the patterns of internal tectal connectivity may be relatively settled by stage 46. In our model, most network measures plateaued, or even reversed late in development (Figure 8), which means that even for a qualitative comparison between the model and the experiment we have to make a critical assumption about whether developmental stage 46 corresponds to a mid-point of network maturation, or falls on the developmental plateau. The absence of improvement in stimulus encoding in older tadpoles (Figure 2G), as well as a known difference in STDP between very young (stage 42) and older (stage 48) tadpoles \citep{richards2010stdp, tsui2010developmental}, suggest that both stages included in this study may indeed fall on the “plateau”. If true, this would mean that the known improvement in collision avoidance between stage 46 and stage 49 tadpoles \citep{dong2009} is largely due to maturation of sensorimotor projections from the tectum to the hindbrain that we did not assess in this study.
 
-Second, a poor fit between model predictions and biological experiments may be a consequence of low statistical power of this study. With, respectively, 14 and 16 networks reconstructed for each developmental stage, we could only hope to detect large changes in network parameters (Cohen $d \approx$ 1.0, assuming $p_t<$ 0.05 threshold and 80\% power). Moreover, based on available imaging studies, we can estimate that at stage 49, one half of a tadpole tectum contains about 10,000 neurons, as it measures about 40 cells across \citep{hiramoto2009}, and is packed 6-10 cells deep in its thickest part \citep{hewapathirane2008vivo}, while tapering towards the edges \citep{bollmann2009}. On the other hand, here we reconstructed connectivity within the top layer of 128$\pm$40 cells, in a field of about 12 by 12 neurons, which means that our reconstructions covered only about 1\% of a full tectal network, and 0.01\% of all connections. With a coverage so sparse, our parameter estimations were expected to be noisy, further lowering our test power.
+Second, a poor fit between model predictions and biological experiments may be a consequence of a relatively low statistical power of this study. With, respectively, 14 and 16 networks reconstructed for each developmental stage, we could only hope to detect large changes in network parameters (Cohen $d \approx$ 1.0, assuming $p_t<$ 0.05 threshold and 80\% power). Moreover, based on available imaging studies, we can estimate that at stage 49, one half of a tadpole tectum contains about 10,000 neurons, as it measures about 40 cells across \citep{hiramoto2009}, and is packed 6-10 cells deep in its thickest part \citep{hewapathirane2008vivo}, while tapering towards the edges \citep{bollmann2009}. On the other hand, here we reconstructed connectivity within the top layer of 128$\pm$40 cells, in a field of about 12 by 12 neurons, which means that our reconstructions covered only about 1\% of a full tectal network, and 0.01\% of all connections. With a coverage so sparse, our parameter estimations were expected to be noisy, further lowering our test power.
 
-Third, one can question the validity of our connectivity reconstructions, as we did not have an opportunity to compare these reconstructions to a "ground truth" connectivity (but see \citealt{xu2011}). The best way to address this concern would be to run a set of control experiments, analyzing transfer entropy between pairs of cells proven to be either connected or disconnected, to estimate the power of graph reconstruction from calcium imaging recordings. Unfortunately, these experiments are currently beyond our technical ability, so we have to rely on indirect criteria of a successful network reconstruction. Two most important observations that support the validity of our results are the fact that the share of reciprocal connections decreased in development; and that we observed a consistent non-randomness of almost all network measurements of reconstructed networks, compared to rewired networks (Figure 5). Also, we were comforted by a good replication of tectal response shapes (Figure 2A,B, compared to \citealt{khakhalin2014}), a good internal replication of edge detection between stimuli types, and an observation of retinotopy during responses to looming stimuli (Figure 3A,B).
+Third, one can question the validity of our connectivity reconstructions, as we did not have an opportunity to compare these reconstructions to a "ground truth" connectivity (but see \citealt{xu2011}). The best way to address this concern would be to run a set of control experiments, analyzing transfer entropy between pairs of cells proven to be either connected or disconnected, to estimate the power of graph reconstruction from calcium imaging recordings. Unfortunately, these experiments are beyond our technical ability, so we have to rely on indirect criteria of a successful network reconstruction. Two most important observations that support the validity of our results are the fact that the share of reciprocal connections decreased in development; and that we observed a consistent non-randomness of almost all network measurements of reconstructed networks, compared to rewired networks (Figure 5). Also, we were comforted by a good replication of tectal response shapes (Figure 2A,B, compared to \citealt{khakhalin2014}), a good internal replication of edge detection between stimuli types, and an observation of retinotopy during responses to looming stimuli (Figure 3A,B).
 
-Finally, the fourth way to explain a relatively poor fit between our model and imaging experiments is to assume that the mechanisms of looming selectivity in the tectum are after all different from that in the model. In our simulations, looming selectivity was mediated by the emergent synfire chains \citep{cohen2002synreview, zheng2014synfire} that were shaped by the structured sensory activation \citep{vislay2006rf, clopath2010stdpcoding}, and thus encoded activation patterns typical for looming stimuli \citep{pratt2008recurrent, richards2010stdp}. When looming stimuli were presented to the model, they "resonated" with matching synfire chains, causing them to respond strongly. It may be that in the biological tectum, enhanced responses to looming stimuli are due to either delayed recurrent integration \citep{khakhalin2014, jang2016}, dynamic inactivation of neurons \citep{fotowat2011multiplexing}, or other non-linear effects \citep{baginskas2009recurrent, heap2018dimming}. The two biggest discrepancies between the model and the experiments were the position of selective cells within the network (central in tadpoles, peripheral in the model; Figure 3C vs. Figure 8J), and the difference in network signal integration in selective cells (slightly higher in-degree and Katz rank in biological experiments, but no similar effect in the base model; Figure 6A-C vs. Figure 8N,O). We however don't find these discrepancies too problematic: the difference in spatial placement of looming-selective cells may be due to the explicit, developmentally controlled arrangement of output neurons in biological tecta that simply was not a part of our model, while the difference in Katz centrality may be explained by exaggerated synaptic competition in the model. Indeed, by introducing strong synaptic competition, we effectively forced neurons to have outputs \textit{within} the tectal network, which led to the development of cycles, while in a real tectum selective cells may lack local outputs, projecting only to other brain regions. This hypothesis is supported by very high Katz centrality of looming-selective cells in simulations without synaptic competition (Figure 8N,O, red lines). We therefore believe that, with limitations of both the model and the experimental data taken into account, they were largely in agreement with each other. 
+Finally, the fourth way to explain a relatively poor fit between our model and imaging experiments is to assume that the mechanisms of looming selectivity in the tectum are after all different from that in the model. In our simulations, looming selectivity was mediated by the emergent synfire chains \citep{cohen2002synreview, zheng2014synfire} that were shaped by the structured sensory activation \citep{vislay2006rf, clopath2010stdpcoding}, and thus encoded activation patterns typical for looming stimuli \citep{pratt2008recurrent, richards2010stdp}. When looming stimuli were presented to the model, they "resonated" with matching synfire chains, causing them to respond strongly. It may be that in the biological tectum, enhanced responses to looming stimuli are due to either delayed recurrent integration \citep{khakhalin2014, jang2016}, dynamic inactivation of neurons \citep{fotowat2011multiplexing}, or other non-linear effects \citep{baginskas2009recurrent, heap2018dimming}. The two biggest discrepancies between the model and the experiments were the position of selective cells within the network (central in tadpoles, peripheral in the model; Figure 3C vs. Figure 8J), and the difference in signal integration in selective cells (selective cells had slightly higher in-degree and Katz rank in biological experiments, but no similar effect was observed in the base model; Figure 6A-C vs. Figure 8N,O). We however don't find these discrepancies too problematic. The difference in spatial placement of looming-selective cells may be due to the explicit, developmentally controlled arrangement of output neurons in biological tecta that simply was not a part of our model, while the difference in Katz centrality may be explained by exaggerated synaptic competition in the model. Indeed, by introducing strong synaptic competition, we effectively forced neurons to have outputs \textit{within} the tectal network, which led to the development of cycles, while in a real tectum selective cells may lack local outputs, projecting mostly to other brain regions. This hypothesis is supported by very high Katz centrality of looming-selective cells in simulations without synaptic competition (Figure 8N,O, red lines). We therefore believe that, with limitations of both the model and the experimental data taken into account, they were largely in agreement with each other. 
 
-At the same time, to actually identify and use a subset of tectal cells as functional looming detector, as we did while estimating stimulus encoding (Figure 8E), a developing brain would need access to a learning signal. As a working hypothesis, we propose that in aquatic vertebrates this learning signal may come from both dimming receptors in the retina \citep{ishikane2005, baranauskas2012, heap2018dimming}, and lateral line receptors in the skin \citep{pratt2009multisens, felch2016, truszkowski2017}. These inputs can then facilitate plasticity in tectal projections to the reticulospinal neurons in the hindbrain, strengthening inputs from a subset of tectal cells that were most active immediately before a collision. Moreover, during random spatial encounters, different parts of the retina would be dimmed, and different segments of the lateral line would be activated in each individual collision, theoretically allowing animals to build several overlapping subnetworks within the tectum, selective for collisions of different geometry, and projecting to different subsets of motor neurons \citep{frost2004review, barker2015sensorimotor, helmbrecht2018topography}. This type of learning could lead to the development of spatially nuanced escape responses that are described in both tadpoles \citep{khakhalin2014} and fish \citep{bhattacharyya2017assessment}. Based on this hypothesis, we predict that if tadpoles are raised individually in empty arenas (devoid of objects to collide with), they should have normal vision and dark-startles, but they would not be able to perform proper collision avoidance.
+At the same time, to actually use a subset of tectal cells as a functional looming detector, as we did while estimating stimulus encoding (Figure 8E), a developing brain would need access to a learning signal, to identify selective cells within the network, and wire their outputs to motor circuits. As a working hypothesis, we suggest that in aquatic vertebrates this learning signal may come from both dimming receptors in the retina \citep{ishikane2005, baranauskas2012, heap2018dimming}, and lateral line receptors in the skin \citep{pratt2009multisens, felch2016, truszkowski2017}. These inputs can facilitate plasticity in tectal projections to the reticulospinal neurons in the hindbrain, strengthening inputs from a subset of tectal cells that were most active immediately before a collision. Moreover, during random spatial encounters, different parts of the retina would be dimmed, and different segments of the lateral line would be activated in each individual collision, allowing animals to build several overlapping subnetworks within the tectum, selective for collisions of different geometry, and projecting to different subsets of motor neurons \citep{frost2004review, barker2015sensorimotor, helmbrecht2018topography}. This type of learning could lead to the development of spatially nuanced escape responses that are described in both tadpoles \citep{khakhalin2014} and fish \citep{bhattacharyya2017assessment}. Based on this hypothesis, we predict that if tadpoles are raised individually in empty arenas (devoid of objects to collide with), they should have normal vision and dark-startles, but they would not be able to perform proper collision avoidance.
 
 To sum up, we show that a combination of simple developmental rules with patterned sensory stimulation can quickly shape a random network into a structured system that is selective for looming stimuli. We show that several predictions from our model are replicated in biological experiments, although we found no improvement in looming detection between stage 46 and 49 tadpoles. We demonstrate that functional connectivity of tectal networks can be reconstructed from fast calcium imaging experiments, and that the structure of these networks can support looming detection in small aquatic animals.
 
