Minor pre-submission changes

--- a/main.tex
+++ b/main.tex
@@ -80,6 +80,7 @@
 \begin{flushleft}
 {\Large
 \textbf\newline{Graph analysis of looming-selective networks in the tectum, and its replication in a simple computational model}
+% 111 characters
 }
 \newline
 % authors go here:
@@ -91,14 +92,7 @@ Arseny S. Khakhalin\textsuperscript{1,*}
 
 * Correspondence: khakhalin@bard.edu
 
-
-% TODO
-
-% Fix figures
-
-% Change Fig. to Figure everywhere
-
-% Sort references by year, to make citations correct
+% Keywords: synfire chains, stdp, looming detection, collision avoidance, development, tectum
 
 \section*{Abstract}
 % 195 words
